--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,10 @@ commands:
       - nx/set-shas:
           main-branch-name: master
       - run: echo $CIRCLE_API_TOKEN
-      - run: pnpm nx affected --target=build --parallel=2 -c ci --nx-bail
+      - run:
+          command: pnpm nx affected --target=build --parallel=2 -c ci --nx-bail
+          environment:
+            NODE_OPTIONS: --max-old-space-size=4096
   clear-jest-cache:
     description: Clear Jest Spec
     steps:
@@ -142,6 +145,7 @@ executors:
   docker-node-neo4j:
     docker:
       - image: cimg/node:18.18.0-browsers
+        name: 127.0.0.1
       - command:
           - neo4j
           - start
@@ -240,30 +244,16 @@ jobs:
     steps:
       - restore-workspace
       - run: pnpm npx playwright install-deps
-      - setup_remote_docker:
-          version: default
       - run:
-          command: |
-            echo 'export SHARD="$((${CIRCLE_NODE_INDEX}+1))"' >> "$BASH_ENV"
-            source "$BASH_ENV"
-
-            echo $SHARD;
-            echo $CIRCLE_NODE_TOTAL;
-
-            pnpm nx e2e web-e2e -c ci
-          environment: null
+          command: pnpm nx e2e web-e2e -c ci
+          environment:
+            NODE_OPTIONS: --max-old-space-size=4096
           name: Run E2E Tests
       - store_artifacts:
-          destination: playwright/videos
-          path: ~/project/dist/.playwright/apps/web-e2e/src/videos
-      - store_artifacts:
-          destination: playwright/screenshots
-          path: ~/project/dist/.playwright/apps/web-e2e/src/screenshots
-      - store_artifacts:
-          destination: playwright/data
-          path: ~/project/dist/.playwright/apps/web-e2e/src/data
+          destination: playwright-report
+          path: ~/project/dist/.playwright/apps/web-e2e/playwright-report
       - store_test_results:
-          path: ./tmp/reports/e2e
+          path: ~/project/dist/.playwright/apps/web-e2e/test-output
   integration:
     executor: docker-node-neo4j
     resource_class: large
