--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,9 +245,7 @@ jobs:
       - restore-workspace
       - run: pnpm npx playwright install-deps
       - run:
-          command: pnpm nx e2e web-e2e -c ci
-          environment:
-            NODE_OPTIONS: --max-old-space-size=4096
+          command: pnpm nx e2e web-e2e -c ci --verbose
           name: Run E2E Tests
       - store_artifacts:
           destination: playwright-report
@@ -421,7 +419,11 @@ jobs:
           root: ~/
   setup-workspace:
     executor: docker-node
-    resource_class: large
+    parameters:
+      resource_class:
+        default: large
+        type: string
+    resource_class: << parameters.resource_class >>
     steps:
       - checkout
       - setup-env
@@ -548,6 +550,7 @@ workflows:
               ignore:
                 - master
                 - staging
+          resource_class: large
       - lint:
           filters:
             branches:
