--- a/.circleci/config/jobs/setup-workspace.yml
+++ b/.circleci/config/jobs/setup-workspace.yml
@@ -1,6 +1,11 @@
+parameters:
+  resource_class:
+    type: string
+    default: large
+
 # Can't build with machine image, causes build issues
 executor: docker-node
-resource_class: large
+resource_class: << parameters.resource_class >>
 steps:
   - checkout
   - setup-env
