--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "private": true,
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.1",
     "@ant-design/icons": "5.4.0",
     "@ant-design/nextjs-registry": "1.0.1",
     "@ant-design/pro-components": "2.7.15",
@@ -151,6 +152,7 @@
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
     "antd": "5.20.2",
+    "antd-style": "^3.6.2",
     "auth0": "4.7.0",
     "auto-bind": "^5.0.1",
     "axios": "1.7.1",
@@ -238,6 +240,7 @@
     "rxjs": "7.8.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
+    "storybook": "^8.2.8",
     "styled-components": "6.1.8",
     "sucrase": "3.32.0",
     "supertest": "6.3.3",
@@ -265,6 +268,7 @@
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "1.12.12",
+    "@chromatic-com/storybook": "^1.7.0",
     "@codelab-app/client-preset": "latest",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
@@ -282,31 +286,31 @@
     "@nestjs/schematics": "10.1.3",
     "@nestjs/testing": "10.4.0",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@nx/devkit": "19.5.7",
-    "@nx/eslint": "19.5.7",
-    "@nx/eslint-plugin": "19.5.7",
-    "@nx/jest": "19.5.7",
-    "@nx/js": "19.5.7",
-    "@nx/nest": "19.5.7",
-    "@nx/next": "19.5.7",
-    "@nx/node": "19.5.7",
-    "@nx/playwright": "19.5.7",
-    "@nx/plugin": "19.5.7",
-    "@nx/react": "19.5.7",
-    "@nx/storybook": "19.5.7",
-    "@nx/vite": "19.5.7",
-    "@nx/web": "19.5.7",
-    "@nx/webpack": "19.5.7",
-    "@nx/workspace": "19.5.7",
+    "@nx/devkit": "19.6.2",
+    "@nx/eslint": "19.6.2",
+    "@nx/eslint-plugin": "19.6.2",
+    "@nx/jest": "19.6.2",
+    "@nx/js": "19.6.2",
+    "@nx/nest": "19.6.2",
+    "@nx/next": "19.6.2",
+    "@nx/node": "19.6.2",
+    "@nx/playwright": "19.6.2",
+    "@nx/plugin": "19.6.2",
+    "@nx/react": "19.6.2",
+    "@nx/storybook": "19.6.2",
+    "@nx/vite": "19.6.2",
+    "@nx/web": "19.6.2",
+    "@nx/webpack": "19.6.2",
+    "@nx/workspace": "19.6.2",
     "@parcel/watcher": "^2.4.1",
     "@playwright/test": "1.46.0",
-    "@storybook/addon-essentials": "8.1.11",
-    "@storybook/addon-interactions": "8.1.11",
+    "@storybook/addon-essentials": "8.2.9",
+    "@storybook/addon-interactions": "8.2.9",
     "@storybook/addon-themes": "^8.1.11",
     "@storybook/core-common": "8.1.11",
-    "@storybook/core-server": "8.1.11",
+    "@storybook/core-server": "8.2.9",
     "@storybook/nextjs": "8.1.11",
-    "@storybook/react": "^8.1.11",
+    "@storybook/react": "8.2.9",
     "@storybook/react-dom-shim": "^8.1.11",
     "@storybook/react-vite": "8.1.11",
     "@storybook/test-runner": "^0.19.0",
@@ -333,7 +337,7 @@
     "@types/flat": "5.0.2",
     "@types/fs-extra": "11.0.4",
     "@types/glob": "8.1.0",
-    "@types/jest": "29.5.2",
+    "@types/jest": "29.5.12",
     "@types/jquery": "3.5.16",
     "@types/js-cookie": "3.0.1",
     "@types/json-schema": "7.0.15",
@@ -416,7 +420,7 @@
     "jsonc-eslint-parser": "2.4.0",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
-    "nx": "19.5.7",
+    "nx": "19.6.2",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.38",
     "process": "0.11.10",
