--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -1,5 +1,11 @@
+parameters:
+  resource_class:
+    type: string
+
 executor: docker-node-neo4j
-resource_class: large
+
+resource_class: << parameters.resource_class >>
+
 # Cypress requires record for parallel to work according to https://github.com/cypress-io/cypress/issues/2520
 # parallelism: 4
 steps:
