--- a/.circleci/config/jobs/integration.yml
+++ b/.circleci/config/jobs/integration.yml
@@ -1,5 +1,11 @@
+parameters:
+  resource_class:
+    type: string
+
 executor: docker-node-neo4j
-resource_class: large
+
+resource_class: << parameters.resource_class >>
+
 steps:
   - restore-workspace
   # - clear-jest-cache
