--- a/.circleci/config/jobs/notify-success.yml
+++ b/.circleci/config/jobs/notify-success.yml
@@ -1,5 +1,11 @@
+parameters:
+  resource_class:
+    type: string
+
 executor: docker-node
-# resource_class: medium
+
+resource_class: << parameters.resource_class >>
+
 steps:
   - slack/notify:
       event: pass
