--- a/.circleci/config/workflows/app.yml
+++ b/.circleci/config/workflows/app.yml
@@ -1,10 +1,12 @@
 jobs:
   - setup-workspace:
+      resource_class: large
       filters:
         branches:
           only:
             - master
   - hold-deploy:
+      # resource_class: medium
       filters:
         branches:
           only:
@@ -13,6 +15,7 @@ jobs:
       requires:
         - setup-workspace
   - setup-infra-workspace:
+      # resource_class: large
       filters:
         branches:
           only:
@@ -20,6 +23,7 @@ jobs:
       requires:
         - hold-deploy
   - docker-web:
+      # resource_class: large
       filters:
         branches:
           only:
@@ -29,6 +33,7 @@ jobs:
       requires:
         - setup-infra-workspace
   - docker-api:
+      # resource_class: large
       filters:
         branches:
           only:
@@ -38,6 +43,7 @@ jobs:
       requires:
         - setup-infra-workspace
   - docker-sites:
+      # resource_class: large
       filters:
         branches:
           only:
@@ -47,6 +53,7 @@ jobs:
       requires:
         - setup-infra-workspace
   - docker-landing:
+      # resource_class: large
       filters:
         branches:
           only:
