--- a/.circleci/config/workflows/infra-pr.yml
+++ b/.circleci/config/workflows/infra-pr.yml
@@ -1,6 +1,7 @@
 # This runs on staging only for testing
 jobs:
   - setup-workspace:
+      resource_class: large
       filters:
         branches:
           only:
