--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -8,6 +8,8 @@
 jobs:
   - setup-workspace:
       resource_class: large
+      environment:
+        NODE_OPTIONS: --max-old-space-size=6144
       filters:
         branches:
           ignore:
@@ -24,6 +26,8 @@ jobs:
   #         ignore: /master/
   - lint:
       resource_class: large
+      environment:
+        NODE_OPTIONS: --max-old-space-size=6144
       filters:
         branches:
           ignore:
