--- a/.circleci/config/workflows/app.yml
+++ b/.circleci/config/workflows/app.yml
@@ -1,6 +1,7 @@
 jobs:
   - setup-workspace:
       resource_class: large
+      max_old_space_size: 6144
       filters:
         branches:
           only:
