--- a/project.json
+++ b/project.json
@@ -1,6 +1,7 @@
 {
   "name": "codelab",
   "$schema": "node_modules/nx/schemas/project-schema.json",
+  "includedScripts": [],
   "tags": ["projectName:codelab", "type:concrete"],
   "targets": {
     "local-registry": {
