--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -63,6 +63,7 @@ jobs:
         - setup-workspace
   - e2e:
       resource_class: large
+      max_old_space_size: 6144
       filters:
         branches:
           ignore:
