--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -63,7 +63,8 @@ jobs:
         - setup-workspace
   - e2e:
       resource_class: large
-      max_old_space_size: 6144
+      # Save ram for docker images
+      max_old_space_size: 4096
       filters:
         branches:
           ignore:
