--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -523,6 +523,9 @@
       "@codelab/frontend-application-shared-data": [
         "libs/frontend/application/shared/data/src/index.ts"
       ],
+      "@codelab/frontend-application-shared-store/loading": [
+        "libs/frontend/application/shared/store/src/loading/index.ts"
+      ],
       "@codelab/frontend-application-shared-store/pagination": [
         "libs/frontend/application/shared/store/src/pagination/index.ts"
       ],
@@ -843,6 +846,9 @@
       ],
       "@codelab/frontend-presentation-view/components/overlay": [
         "libs/frontend/presentation/view/src/components/overlay/index.ts"
+      ],
+      "@codelab/frontend-presentation-view/components/progressBar": [
+        "libs/frontend/presentation/view/src/components/progressBar/index.ts"
       ],
       "@codelab/frontend-presentation-view/components/skeleton": [
         "libs/frontend/presentation/view/src/components/skeleton/index.ts"
