--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -14,7 +14,8 @@ steps:
   - run: echo $CIRCLE_API_TOKEN
   # parallel=2 causes
   - run:
-      command: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail
+      #   command: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail
+      command: pnpm nx run-many --target=build --projects=cli,web,api --parallel=3 -c ci --nx-bail
   # - save_cache:
   #     name: 'Save NX Cache'
   #     # nx doesn't use `lockfile.hash` anymore
