--- a/libs/frontend/presentation/components/form/tsconfig.lib.json
+++ b/libs/frontend/presentation/components/form/tsconfig.lib.json
@@ -2,12 +2,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../../dist/out-tsc",
-    "types": [
-      "styled-components",
-      "../../../../../@nx/react/typings/cssmodule.d.ts",
-      "../../../../../@nx/react/typings/image.d.ts"
-    ]
+    "types": ["styled-components"]
   },
+  "files": [
+    "../../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
+    "../../../../../node_modules/@nx/react/typings/image.d.ts"
+  ],
   "exclude": [
     "jest.config.ts",
     "src/**/*.spec.ts",
