--- a/libs/frontend/cui/utils/project.json
+++ b/libs/frontend/cui/utils/project.json
@@ -62,6 +62,9 @@
       },
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint"
     }
   }
 }
