--- a/libs/shared/infra/gql/project.json
+++ b/libs/shared/infra/gql/project.json
@@ -10,6 +10,9 @@
     "layer:infra",
     "scope:shared"
   ],
-  "// targets": "to see all targets run: nx show project shared-infra-gql --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
