--- a/libs/external/codelab-codegen/typescript-fetch/project.json
+++ b/libs/external/codelab-codegen/typescript-fetch/project.json
@@ -85,6 +85,9 @@
       },
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint"
     }
   }
 }
