--- a/libs/frontend/infra/graphql/project.json
+++ b/libs/frontend/infra/graphql/project.json
@@ -10,6 +10,9 @@
     "layer:infra",
     "scope:frontend"
   ],
-  "// targets": "to see all targets run: nx show project frontend-infra-graphql --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
