--- a/package.json
+++ b/package.json
@@ -444,7 +444,16 @@
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
   "nx": {
-    "includedScripts": []
+    "includedScripts": [],
+    "targets": {
+      "lint": {
+        "executor": "@nx/eslint:lint"
+      }
+    },
+    "tags": [
+      "projectName:codelab",
+      "type:concrete"
+    ]
   },
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
