--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -9,17 +9,17 @@ steps:
   - restore_cache:
       name: 'Restore NX Cache'
       keys:
-        - node-modules-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
-        - node-modules-cache-*-{{ checksum "pnpm-lock.yaml" }}
-        - node-modules-cache-
+        - nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+        - nx-cache-*-{{ checksum "pnpm-lock.yaml" }}
+        - nx-cache-
   - run:
       #   command: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail
       command: pnpm nx run-many --target=build --projects=cli,web,api --parallel=3 -c ci --nx-bail
   # CI caching guide https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching
   - save_cache:
       name: 'Save NX Cache'
-      keys:
-        - node-modules-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
+      key:
+        nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
         # nx doesn't use `lockfile.hash` anymore, so move the pnpm
         # - nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
       paths:
