--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "private": true,
   "dependencies": {
-    "@ant-design/cssinjs": "^1.21.1",
+    "@ant-design/cssinjs": "1.21.1",
     "@ant-design/icons": "5.4.0",
     "@ant-design/nextjs-registry": "1.0.1",
     "@ant-design/pro-components": "2.7.15",
@@ -445,14 +445,8 @@
   },
   "nx": {
     "includedScripts": [],
-    "targets": {
-      "lint": {
-        "executor": "@nx/eslint:lint"
-      }
-    },
     "tags": [
-      "projectName:codelab",
-      "type:concrete"
+      "projectName:codelab"
     ]
   },
   "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
