--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -966,10 +966,7 @@
       "@codelab/shared/utils": ["libs/shared/utils/src/index.ts"],
       "@codelab/tools-workspace": ["libs/tools/workspace/src/index.ts"],
       "@codelab/tools/eslint-plugin": ["libs/tools/eslint-plugin/src/index.ts"],
-      "@cui/ui-atoms/Button": ["libs/frontend/cui/ui/atoms/src/Button.tsx"],
-      "@cui/ui-atoms/Form": ["libs/frontend/cui/ui/atoms/src/Form.tsx"],
-      "@cui/ui-atoms/Input": ["libs/frontend/cui/ui/atoms/src/Input.tsx"],
-      "@cui/ui-atoms/Toast": ["libs/frontend/cui/ui/atoms/src/Toast/index.ts"],
+      "@cui/ui-atoms": ["libs/frontend/cui/ui/atoms/src/index.ts"],
       "@cui/ui-molecules": ["libs/frontend/cui/ui/molecules/src/index.ts"],
       "@cui/ui-organisms": ["libs/frontend/cui/ui/organisms/src/index.ts"],
       "@cui/utils": ["libs/frontend/cui/utils/src/index.ts"]
