--- a/package.json
+++ b/package.json
@@ -142,7 +142,7 @@
     "@rjsf/validator-ajv8": "5.18.3",
     "@shopify/network": "^3.3.0",
     "@shopify/react-performance": "^4.1.0",
-    "@sinclair/typebox": "0.32.31",
+    "@sinclair/typebox": "0.33.7",
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
     "@swc/helpers": "0.5.11",
@@ -441,7 +441,8 @@
   "resolutions": {
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.0",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@sinclair/typebox": "0.33.7"
   },
   "nx": {
     "includedScripts": [],
