refactor: schema and validation

--- a/libs/shared/domain/tsconfig.spec.json
+++ b/libs/shared/domain/tsconfig.spec.json
@@ -20,6 +20,7 @@
     "**/*.spec.js",
     "**/*.test.jsx",
     "**/*.spec.jsx",
-    "**/*.d.ts"
+    "**/*.d.ts",
+    "../infra/schema/src/schema/ref.utils.spec.ts"
   ]
 }
