--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -28,7 +28,7 @@
       "executor": "@nx/next:server",
       "options": {
         "buildTarget": "web:build",
-        "turbo": false,
+        "turbo": true,
         "port": 3000,
         "hostname": "0.0.0.0",
         "maxWorkers": 4
