--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -28,8 +28,8 @@
       "executor": "@nx/next:server",
       "options": {
         "buildTarget": "web:build",
-        "turbo": true,
         "port": 3000,
+        "turbo": false,
         "hostname": "0.0.0.0",
         "maxWorkers": 4
       },
