--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -13,6 +13,8 @@ steps:
         - nx-cache-*-{{ checksum "pnpm-lock.yaml" }}
         - nx-cache-
   - run:
+      command: (./scripts/nx/reset-cache.sh)
+  - run:
       #   command: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail
       command: pnpm nx run-many --target=build --projects=cli,web,api --parallel=3 -c ci --nx-bail
   # CI caching guide https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching
