--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
     "@graphql-typed-document-node/core": "3.2.0",
-    "@hookform/resolvers": "^3.7.0",
+    "@hookform/resolvers": "3.7.0",
     "@lexical/html": "0.15.0",
     "@lexical/link": "0.15.0",
     "@lexical/react": "0.15.0",
