--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -54,6 +54,7 @@ jobs:
         - setup-workspace
   - integration:
       resource_class: large
+      max_old_space_size: 4096
       filters:
         branches:
           ignore:
