--- a/.circleci/config/jobs/integration.yml
+++ b/.circleci/config/jobs/integration.yml
@@ -1,10 +1,15 @@
 parameters:
   resource_class:
     type: string
+  max_old_space_size:
+    type: integer
 
 executor: docker-node-neo4j
 
 resource_class: << parameters.resource_class >>
+
+environment:
+  NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
 
 steps:
   - restore-workspace
@@ -12,7 +17,7 @@ steps:
   - run:
       name: 'Run Integration Tests'
       command: pnpm cli tasks int --stage ci
-      no_output_timeout: 20m
+      no_output_timeout: 10m
       environment:
         JEST_JUNIT_OUTPUT_DIR: ./tmp/reports/test-integration
         # JEST_JUNIT_OUTPUT_NAME: 'integration-specs-results.xml'
