wip: refactor pagination
wip: refactor pagination

wip: refactor pagination

wip: refactor pagination

wip: refactor pagination

--- a/libs/frontend/presentation/codelab-ui/.eslintrc.json
+++ b/libs/frontend/presentation/codelab-ui/.eslintrc.json
@@ -11,8 +11,8 @@
         ]
       },
       "rules": {
-        "react/jsx-props-no-spreading": "off",
-        "tailwindcss/no-custom-classname": "off"
+        "react/jsx-props-no-spreading": "off"
+        // "tailwindcss/no-custom-classname": "off"
       }
     },
     {
