--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "commit": "git-cz",
     "cpack": "scripts/circleci/circleci-pack.sh",
     "git:prune": "git gc --aggressive --prune=now",
-    "prepare": "husky"
+    "prepare": "husky",
+    "knip": "knip"
   },
   "private": true,
   "dependencies": {
@@ -420,6 +421,7 @@
     "jest-transform-stub": "2.0.0",
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
+    "knip": "^5.29.2",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
     "nx": "19.6.5",
