chore: install pnpm

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -36,7 +36,8 @@
     "next-env.d.ts",
     "index.d.ts",
     ".next/types/**/*.ts",
-    "../../dist/apps/web/.next/types/**/*.ts"
+    "../../dist/apps/web/.next/types/**/*.ts",
+    "../../dist/apps/web-test/.next/types/**/*.ts"
   ],
   "exclude": [
     "jest.config.ts",
