--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -25,8 +25,7 @@ jobs:
   #         ignore: /master/
   - lint:
       resource_class: large
-      # environment:
-      #   NODE_OPTIONS: --max-old-space-size=6144
+      max_old_space_size: 6144
       filters:
         branches:
           ignore:
