--- a/.circleci/config/jobs/lint.yml
+++ b/.circleci/config/jobs/lint.yml
@@ -1,12 +1,15 @@
 parameters:
   resource_class:
     type: string
+  max_old_space_size:
+    type: integer
 
 executor: docker-node
 
 resource_class: << parameters.resource_class >>
 
 environment:
+  NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
   CIRCLE_BASE_REVISION: << pipeline.git.base_revision >>
   CIRCLE_REVISION: << pipeline.git.revision >>
 
