--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,7 +267,7 @@ jobs:
       - restore-workspace
       - run: pnpm npx playwright install-deps
       - run:
-          command: pnpm nx e2e web-e2e -c ci
+          command: pnpm nx e2e web-e2e -c ci --verbose
           name: Run E2E Tests
       - store_artifacts:
           destination: playwright-report
