--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -13,7 +13,7 @@
         "project": ["apps/web/tsconfig(.*)?.json"]
       },
       "rules": {
-        "@next/next/no-html-link-for-pages": ["error", "apps/web/pages"],
+        "@next/next/no-html-link-for-pages": "error",
         "jsx-a11y/anchor-is-valid": "off",
         "react/jsx-no-useless-fragment": "off"
       }
