--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "prettier": "2.8.8",
     "puppeteer": "22.9.0",
     "query-string": "^9.0.0",
+    "radash": "^12.1.0",
     "ramda": "0.29.0",
     "rc-select": "14.13.0",
     "rc-upload": "4.5.2",
@@ -287,7 +288,6 @@
     "@nestjs/schematics": "10.1.3",
     "@nestjs/testing": "10.4.0",
     "@next/eslint-plugin-next": "^14.2.3",
-    "nx": "19.6.5",
     "@nx/devkit": "19.6.5",
     "@nx/eslint": "19.6.5",
     "@nx/eslint-plugin": "19.6.5",
@@ -423,6 +423,7 @@
     "knip": "^5.29.2",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
+    "nx": "19.6.5",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.10",
