wip: add preference model

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -119,6 +119,9 @@
       ],
       "@codelab/backend/domain/page": ["libs/backend/domain/page/src/index.ts"],
       "@codelab/backend/domain/prop": ["libs/backend/domain/prop/src/index.ts"],
+      "@codelab/backend/domain/preference": [
+        "libs/backend/domain/preference/src/index.ts"
+      ],
       "@codelab/backend/domain/redirect": [
         "libs/backend/domain/redirect/src/index.ts"
       ],
@@ -654,6 +657,15 @@
       ],
       "@codelab/frontend-domain-atom/test": [
         "libs/frontend/domain/atom/src/test/index.ts"
+      ],
+      "@codelab/frontend-domain-preference/repositories": [
+        "libs/frontend/domain/preference/src/repositories/index.ts"
+      ],
+      "@codelab/frontend-domain-preference/services": [
+        "libs/frontend/domain/preference/src/services/index.ts"
+      ],
+      "@codelab/frontend-domain-preference/store": [
+        "libs/frontend/domain/preference/src/store/index.ts"
       ],
       "@codelab/frontend-domain-auth-guard/repositories": [
         "libs/frontend/domain/auth-guard/src/repositories/index.ts"
