--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -463,6 +463,9 @@
       "@codelab/frontend-application-page/views": [
         "libs/frontend/application/page/src/views/index.ts"
       ],
+      "@codelab/frontend-application-preference/services": [
+        "libs/frontend/application/preference/src/services/index.ts"
+      ],
       "@codelab/frontend-application-prop/services": [
         "libs/frontend/application/prop/src/services/index.ts"
       ],
