--- a/libs/frontend/presentation/components/fancybox/tsconfig.lib.json
+++ b/libs/frontend/presentation/components/fancybox/tsconfig.lib.json
@@ -2,14 +2,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../../dist/out-tsc",
-    "types": [
-      "node",
-      "@fancyapps/ui",
-      "@nx/react/typings/cssmodule.d.ts",
-      "@nx/react/typings/image.d.ts"
-    ]
+    "types": ["node", "@fancyapps/ui"]
   },
-  "files": [],
+  "files": [
+    "../../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
+    "../../../../../node_modules/@nx/react/typings/image.d.ts"
+  ],
   "exclude": [
     "jest.config.ts",
     "src/**/*.spec.ts",
