--- a/libs/tools/workspace/.eslintrc.json
+++ b/libs/tools/workspace/.eslintrc.json
@@ -7,7 +7,9 @@
       "parserOptions": {
         "project": ["libs/tools/workspace/tsconfig.*?.json"]
       },
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/ban-types": "off"
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
