--- a/apps/api/.env.test.example
+++ b/apps/api/.env.test.example
@@ -10,3 +10,9 @@ AUTH0_E2E_PASSWORD=
 NEO4J_URI=bolt://127.0.0.1:7688
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=password
+
+#
+# DigitalOcean
+#
+DIGITALOCEAN_API_TOKEN=
+DIGITALOCEAN_DROPLET_NAME=sites
