--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -30,7 +30,7 @@
       "options": {
         "buildTarget": "web:build",
         "port": 3000,
-        "turbo": false,
+        "turbo": true,
         "hostname": "0.0.0.0",
         "maxWorkers": 4
       },
