--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "@sinclair/typebox": "0.33.7",
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
-    "@swc/helpers": "0.5.11",
+    "@swc/helpers": "0.5.13",
     "@twind/core": "1.1.3",
     "@twind/preset-tailwind": "1.1.4",
     "@twind/with-next": "1.2.2",
@@ -226,6 +226,7 @@
     "react-hook-form-antd": "^1.1.0",
     "react-hotjar": "5.3.0",
     "react-hotkeys-hook": "3.4.4",
+    "react-is": "18.3.1",
     "react-quill": "2.0.0",
     "react-resizable": "3.0.4",
     "react-resizable-panels": "2.1.2",
@@ -287,22 +288,22 @@
     "@nestjs/schematics": "10.1.3",
     "@nestjs/testing": "10.4.0",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@nx/devkit": "19.7.0",
-    "@nx/eslint": "19.7.0",
-    "@nx/eslint-plugin": "19.7.0",
-    "@nx/jest": "19.7.0",
-    "@nx/js": "19.7.0",
-    "@nx/nest": "19.7.0",
-    "@nx/next": "19.7.0",
-    "@nx/node": "19.7.0",
-    "@nx/playwright": "19.7.0",
-    "@nx/plugin": "19.7.0",
-    "@nx/react": "19.7.0",
-    "@nx/storybook": "19.7.0",
-    "@nx/vite": "19.7.0",
-    "@nx/web": "19.7.0",
-    "@nx/webpack": "19.7.0",
-    "@nx/workspace": "19.7.0",
+    "@nx/devkit": "19.7.2",
+    "@nx/eslint": "19.7.2",
+    "@nx/eslint-plugin": "19.7.2",
+    "@nx/jest": "19.7.2",
+    "@nx/js": "19.7.2",
+    "@nx/nest": "19.7.2",
+    "@nx/next": "19.7.2",
+    "@nx/node": "19.7.2",
+    "@nx/playwright": "19.7.2",
+    "@nx/plugin": "19.7.2",
+    "@nx/react": "19.7.2",
+    "@nx/storybook": "19.7.2",
+    "@nx/vite": "19.7.2",
+    "@nx/web": "19.7.2",
+    "@nx/webpack": "19.7.2",
+    "@nx/workspace": "19.7.2",
     "@parcel/watcher": "^2.4.1",
     "@playwright/test": "1.46.0",
     "@storybook/addon-essentials": "8.2.9",
@@ -317,11 +318,11 @@
     "@storybook/test-runner": "^0.19.0",
     "@stylistic/eslint-plugin-ts": "1.6.3",
     "@svgr/webpack": "8.0.1",
-    "@swc-node/register": "1.9.1",
-    "@swc/cli": "0.3.12",
-    "@swc/core": "1.5.7",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "0.4.0",
+    "@swc/core": "1.7.26",
     "@swc/jest": "0.2.36",
-    "@swc/plugin-styled-components": "2.0.6",
+    "@swc/plugin-styled-components": "3.0.1",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.4.8",
     "@testing-library/react": "16.0.0",
@@ -345,17 +346,19 @@
     "@types/jsonwebtoken": "9.0.6",
     "@types/mailchimp__mailchimp_marketing": "3.0.8",
     "@types/multer": "1.4.11",
-    "@types/node": "18.19.33",
+    "@types/node": "18.19.9",
     "@types/passport-jwt": "4.0.1",
     "@types/prettier": "2.7.3",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/react-grid-layout": "1.3.4",
+    "@types/react-is": "18.3.0",
     "@types/react-resizable": "1.7.4",
     "@types/react-responsive": "8.0.5",
     "@types/react-slick": "0.23.10",
     "@types/react-stickynode": "4.0.0",
     "@types/react-syntax-highlighter": "15.5.4",
+    "@types/styled-components": "5.1.26",
     "@types/supertest": "2.0.16",
     "@types/uuid": "8.3.4",
     "@types/voca": "1.4.2",
@@ -370,6 +373,7 @@
     "ajv-formats": "2.1.1",
     "ajv-keywords": "5.1.0",
     "autoprefixer": "10.4.14",
+    "babel-plugin-styled-components": "1.10.7",
     "boxen": "^7.1.1",
     "chance": "1.1.11",
     "change-case-all": "^2.1.0",
@@ -418,9 +422,9 @@
     "knip": "^5.29.2",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
-    "nx": "19.7.0",
+    "nx": "19.7.2",
     "pino-pretty": "10.3.1",
-    "postcss": "8.4.38",
+    "postcss": "8.4.45",
     "simple-git": "^3.26.0",
     "tailwindcss": "3.4.10",
     "ts-essentials": "9.1.2",
