--- a/apps/sites/tsconfig.json
+++ b/apps/sites/tsconfig.json
@@ -6,13 +6,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": false,
     "lib": ["es2021", "DOM"],
-    "types": [
-      "node",
-      "worker-loader",
-      "@fancyapps/ui",
-      "cypher",
-      "styled-components"
-    ],
+    "types": ["node", "worker-loader", "cypher", "styled-components"],
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
