--- a/apps/web/tsconfig.spec.json
+++ b/apps/web/tsconfig.spec.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["@fancyapps/ui", "jest", "node"],
+    "types": ["jest", "node"],
     "jsx": "react"
   },
   "include": [
