--- a/libs/frontend/presentation/components/fancybox/tsconfig.lib.json
+++ b/libs/frontend/presentation/components/fancybox/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../../dist/out-tsc",
-    "types": ["node", "@fancyapps/ui"]
+    "types": ["node"]
   },
   "files": [
     "../../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
