--- a/libs/frontend/presentation/view/tsconfig.lib.json
+++ b/libs/frontend/presentation/view/tsconfig.lib.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
-    "types": ["node", "worker-loader", "@fancyapps/ui", "styled-components"]
+    "types": ["node", "worker-loader", "styled-components"]
   },
   "files": [
     "../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
