--- a/.env.test.example
+++ b/.env.test.example
@@ -17,7 +17,7 @@ NEXT_PUBLIC_BASE_API_PATH=/api/v1
 # A long secret value used to encrypt the session cookie
 AUTH0_SECRET=
 # The url of your Auth0 tenant hooks
-AUTH0_DOMAIN=codelab-app-test.us.auth0.com/
+AUTH0_DOMAIN=codelab-app-test.us.auth0.com
 # Your Auth0 application's Client ID
 AUTH0_CLIENT_ID=HiPyR5vYBcMhpydeIzgAzhji5QHXldi7
 # Your Auth0 application's Client Secret
